# pyautomagic

./: .gitignore  .travis.yml  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  README.html  README.md  TESTING_SETUP.md  api.html  block_debugging.ipynb  environment.yaml  genindex.html  index.html  objects.inv  preprocessing.html  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  source.html  whats_new.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
_downloads/f90a39402bd93fe2ec7935f08fd7bdb2/: run_automagic.ipynb
_modules/: Block.html  Project.html  Subject.html  calcQuality.html  index.html  performFilter.html  perform_EOG_regression.html  preprocess.html  rateQuality.html  rpca.html
_sources/: README.md.txt  index.rst.txt  source.rst.txt  whats_new.rst.txt
_sources/auto_examples/: index.rst.txt  run_automagic.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  run_automagic.html  sg_execution_times.html
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  preprocessing.rst  whats_new.rst
examples/: README.txt  run_automagic.py
notebooks/: EOG Regression notebook.ipynb  PreprocessAll.ipynb  PreprocessAllTest.ipynb  Project_Tutorial.ipynb  block_tutorial.ipynb  finding_noisy_chns.ipynb  performFilter_demo.ipynb  preprocess function demo.ipynb  preprocess_demo.ipynb  removeTrendDemo.ipynb
pyautomagic/: __init__.py
pyautomagic/preprocessing/: finding_noisy_chns.ipynb  performEOGRegression.py  performFilter.py  rpca.py  (+2 more)
tests/: README.md  conftest.py
(+54 files in other folders)
