[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[pydocstyle]
convention = numpy
match_dir = ^(?!\.|doc|examples|utils|).*$
add-ignore = D100,D104,D105,D107,D413
add-select = D214,D215,D404,D405,D406,D407,D408,D409,D410,D411

[tool:pytest]
filterwarnings =
    ignore::UserWarning
    ignore::DeprecationWarning
    ignore::RuntimeWarning

[tool:pylint]
ignore-patterns=./pyautomagic/base/utils/*

[flake8]
max-line-length = 79
max-complexity = 10